# 3DCurves

./: .gitignore  CMakeLists.txt  curves3d_exe  main.cpp
Curves3D/: Circle3D.cpp  Ellipse3D.cpp  Helix3D.cpp
Curves3D/Include/: Circle3D.h  Ellipse3D.h  Helix3D.h  ICurve3D.h  Point3D.h
